feat:修改printUtils&新增力扣128