@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class Demo970 {
 
@@ -16,6 +17,6 @@ public class Demo970 {
             }
             if (x == 1) break;
         }
-        return ans.stream().toList();
+        return ans.stream().collect(Collectors.toList());
     }
 }
